# ONFI_verification_IP_cocotb

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md
cocotbext_onfi_upstream/: README.md  pyproject.toml
cocotbext_onfi_upstream/hdl/: dummy_dut.v  nand_controller.v  top.v
cocotbext_onfi_upstream/src/cocotbext/onfi/: bus.py  controller.py  memory.py
cocotbext_onfi_upstream/tests/: transcript
cocotbext_onfi_upstream/tests/sim_build/: runsim.do
cocotbext_onfi_upstream/tests/sim_build/work/: _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
cocotbext_onfi_upstream/tests/venv2/: pyvenv.cfg
src/cocotbext/onfi/: config.py
tests/: waveform.fst
tests/sim_build/work/: _info
